# opencv-hood-detection

./: CMakeLists.txt  OHD_main.cpp  OHD_statemachine.cpp  OHD_statemachine.hpp  OHD_types.hpp  README.md
test/: CMakeLists.txt  OHD_mock.hpp  OHD_test.cpp
